<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="test">test</string>
    <string name="msg_test">DEFAULT TEXT</string>
    <string name="app_name">ENT mobile</string>
    <string name="action_settings">Settings</string>
    <string name="ActionHelpButton">ActionHelpButton</string>
    <string name="boutonCo1">Connexion</string>
    <string name="boutonCancel">Annuler</string>
    <string name="boutonCo2">Se connecter</string>
    <string name="inputId">Votre identifiant</string>
    <string name="inputPwd">Votre mot de passe</string>
    <string name="alertPwdTitle"><b>Mot de passe oublié</b></string>
    <string name="alertPwdMessage">Souhaitez-vous que l\'on vous envoie un nouveau mot de passe par mail ?</string>
    <string name="alertReservationTitle"><b>Réservation de la salle</b></string>
    <string name="alertModificationNoteTitle"><b>Modification de la note</b></string>
    <string name="alertSuppressionNoteTitle"><b>Suppression de la note</b></string>
    <string name="alertAjoutNoteTitle"><b>Ajout d\'une nouvelle note</b></string>
    <string name="alertSuppressionUETitle"><b>Suppression de l\'UE</b></string>
    <string name="alertAjoutUETitle"><b>Ajout d\'une l\'UE</b></string>
    <string name="alertModificationPlanningTitle"><b>Modification du créneau de réservation</b></string>
    <string name="alertAjoutPlanningTitle"><b>Réservation d\'une salle de cours</b></string>
    <string name="alertReservationMessage">Confirmez-vous la réservation de la salle </string>
    <string name="alertModificationNoteMessage">Confirmez-vous la modification de la note actuelle de  </string>
    <string name="alertSuppressionNoteMessage">Confirmez-vous la suppression de la note actuelle de  </string>
    <string name="alertAjoutNoteMessage">Veuillez renseigner les informations suivantes pour ajouter une nouvelle note.</string>
    <string name="alertSuppressionUEMessage">Souhaitez-vous supprimer de votre liste de préférences l\'UE suivante :  </string>
    <string name="alertAjoutUEMessage">Souhaitez-vous ajouter à votre liste de préférences l\'UE suivante :  </string>
    <string name="alertModificationPlanningMessage">Souhaitez-vous poursuivre et</string>
    <string name="alertAjoutPlanningMessage_start">Afin de finaliser la réservation de la salle </string>
    <string name="alertAjoutPlanningMessage_end">, merci de sélectionner l\'UE concernée.</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="alertPwdToast">Votre mot de passe a été réinitialisé et renvoyé par mail.</string>
    <string name="alertConfirmToast">La salle que vous avez choisie a bien été réservée</string>
    <string name="boutonCo2Toast">Vous êtes désormais connecté(e) ...</string>
    <string name="drawer_open">Menu principal ouvert</string>
    <string name="drawer_close">Menu principal fermé</string>
    <string name="label_menu">MENU PRINCIPAL</string>
    <string name="label_accueil">PAGE D\'ACCUEIL</string>
    <string name="label_planning_prof">VUE DU PLANNING PERSONNEL</string>
    <string name="label_planning_salle">VUE DU PLANNING PAR SALLE : AMPHI 9001</string>
    <string name="label_reservation">RÉSERVER UNE SALLE</string>
    <string name="label_notes">GESTION DES NOTES</string>
    <string name="label_profil">PROFIL D\'UTILISATEUR</string>
    <string name="boutonCoDeconnexionToast">Vous êtes désormais déconnecté(e) de l\'application ...</string>
    <string name="lundi">Lundi</string>
    <string name="mardi">Mardi</string>
    <string name="mercredi">Mercredi</string>
    <string name="jeudi">Jeudi</string>
    <string name="vendredi">Vendredi</string>
    <string name="samedi">Samedi</string>
    <string name="h8">08h00–10h00</string>
    <string name="h10">10h00–12h00</string>
    <string name="h13">13h30–15h30</string>
    <string name="h15">15h30–17h30</string>
    <string name="h17">17h30–19h30</string>
    <string name="vide"></string>
    <string name="nom_profil">Nom :</string>
    <string name="prenom_profil">Prénom :</string>
    <string name="adresse_profil">Adresse :</string>
    <string name="email_profil">E-mail :</string>
    <string name="telephone_profil">Téléphone :</string>
    <string name="site_web_profil">Site Web :</string>
    <string name="semaine"><u>Semaine 50</u></string>
    <string name="boutonListeUE">Accéder à la liste de mes UE</string>
    <string name="label_listeUE">Gestion des Unités d\'Enseignement</string>
    <string name="boutonRecherche_salle">Lancer une recherche</string>
    <string name="boutonRecherche_salle_new">Effectuer une nouvelle recherche</string>
    <string name="boutonCalendarReservation">Sélectionner une date</string>
    <string name="boutonReinitialize">Réinitialiser le formulaire</string>
    <string name="recherche_effectif_text">Effectif total : </string>
    <string name="recherche_date_text">jj / mm / aaaa</string>
    <string name="recherche_duree_cours_text">Durée du cours (heures) : </string>
    <string name="select_ue">Sélectionner une Unité d\'Enseignement</string>
    <string name="select_student">Sélectionner un élève</string>
    <string name="select_date">Sélectionner une date</string>
    <string name="add_mark">Ajouter une nouvelle note pour un élève</string>
    <string name="alertConfirmNoteModifiedToast">La modification de la note a bien été prise en compte.</string>
    <string name="alertConfirmNoteDeletedToast">La suppression de la note a bien été prise en compte.</string>
    <string name="alertConfirmNoteAddedToast">L\'ajout de la note a bien été pris en compte.</string>
    <string name="alertConfirmPlanningModifiedToast">La modification du planning a bien été prise en compte.</string>

    <!--Strings array pour les items des menus de chaque activité-->
    <string-array name="menu_items_accueil">
        <item>PLANNING PROF</item>
        <item>PLANNING SALLE</item>
        <item>RÉSERVER SALLE</item>
        <item>NOTES</item>
        <item>PROFIL</item>
        <item>DÉCONNEXION</item>
    </string-array>

    <string-array name="menu_items_planning_prof">
        <item>ACCUEIL</item>
        <item>PLANNING SALLE</item>
        <item>RÉSERVER SALLE</item>
        <item>NOTES</item>
        <item>PROFIL</item>
        <item>DÉCONNEXION</item>
    </string-array>

    <string-array name="menu_items_planning_salle">
        <item>ACCUEIL</item>
        <item>PLANNING PROF</item>
        <item>RÉSERVER SALLE</item>
        <item>NOTES</item>
        <item>PROFIL</item>
        <item>DÉCONNEXION</item>
    </string-array>

    <string-array name="menu_items_reservation">
        <item>ACCUEIL</item>
        <item>PLANNING PROF</item>
        <item>PLANNING SALLE</item>
        <item>NOTES</item>
        <item>PROFIL</item>
        <item>DÉCONNEXION</item>
    </string-array>

    <string-array name="menu_items_notes">
        <item>ACCUEIL</item>
        <item>PLANNING PROF</item>
        <item>PLANNING SALLE</item>
        <item>RÉSERVER SALLE</item>
        <item>PROFIL</item>
        <item>DÉCONNEXION</item>
    </string-array>

    <string-array name="menu_items_profil">
        <item>ACCUEIL</item>
        <item>PLANNING PROF</item>
        <item>PLANNING SALLE</item>
        <item>RÉSERVER SALLE</item>
        <item>NOTES</item>
        <item>DÉCONNEXION</item>
    </string-array>

    <!--Liste des types de salle-->
    <string name="type_salle">Type de la salle</string>
    <string-array name="type_salle_items">
        <item>Type de la salle</item>
        <item>Salle de CM</item>
        <item>Salle de TD</item>
        <item>Salle de TP</item>
    </string-array>

    <!--Liste des départements de l'université-->
    <string name="nom_departement">Localisation de la salle</string>
    <string-array name="nom_departement_items">
        <item>Choix du département</item>
        <item>Dpt. Biologie</item>
        <item>Dpt. Chimie</item>
        <item>Dpt. Géologie</item>
        <item>Dpt. Maths-Info</item>
        <item>Dpt. Physique</item>
    </string-array>

    <!--Liste des équipements de la salle-->
    <string name="nom_equipement">Disponibilité d\'un équipement</string>
    <string-array name="nom_equipement_items_a">
        <item>Choix de l\'équipement n°1</item>
        <item>Microscope</item>
        <item>Ordinateur</item>
        <item>Oscilloscope</item>
        <item>Projecteur</item>
    </string-array>
    <string-array name="nom_equipement_items_b">
        <item>Choix de l\'équipement n°2</item>
        <item>Microscope</item>
        <item>Ordinateur</item>
        <item>Oscilloscope</item>
        <item>Projecteur</item>
    </string-array>

    <!--Liste créneaux horaires début de cours-->
    <string name="horaire_debut_cours">Horaire du début du cours</string>
    <string name="titre_table_preferences_UE">Liste de préférences des UE</string>
    <string name="titre_table_recherche_UE">Résultats de la recherche des UE</string>
    <string name="hint_name_exam">Saisissez le nom de l\'examen</string>
    <string name="hint_note">Saisissez une note</string>
    <string-array name="horaire_debut_cours_items">
        <item>Horaire du début du cours</item>
        <item>Début du cours à 08:00</item>
        <item>Début du cours à 09:00</item>
        <item>Début du cours à 10:00</item>
        <item>Début du cours à 11:00</item>
        <item>Début du cours à 13:30</item>
        <item>Début du cours à 14:30</item>
        <item>Début du cours à 15:30</item>
        <item>Début du cours à 16:30</item>
        <item>Début du cours à 17:30</item>
        <item>Début du cours à 18:30</item>
    </string-array>


</resources>
