<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Connexion" >

    <Button
        style="@style/boutonA"
        android:id="@+id/boutonCo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:height="70dp"
        android:width="140dp"
        android:visibility="visible"
        android:text="@string/boutonCo1"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/identification"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:visibility="invisible"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/panelId1"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:background="@drawable/rectangle">

            <EditText
                style="@style/inputA"
                android:id="@+id/inputId"
                android:hint="@string/inputId"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:id="@+id/panelId2"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/boutonHelp"
                    android:background="@drawable/ic_action_help"
                    android:layout_gravity="center"
                    android:layout_marginRight="45dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/ActionHelpButton" />

                <EditText
                    style="@style/inputA"
                    android:id="@+id/inputPwd"
                    android:hint="@string/inputPwd"
                    android:inputType="textPassword"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/boutonsId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                style="@style/boutonB"
                android:id="@+id/boutonCancel"
                android:layout_marginRight="45dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boutonCancel" />

            <Button
                style="@style/boutonA"
                android:id="@+id/boutonCo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boutonCo2" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
